--- a/styles.css
+++ b/styles.css
@@ -1,55 +1,41 @@
-/*  your css code here. If applicable */
-.all{
-	background-color: #f6f6f6;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100vh;
+.container{
+	margin-top : 5rem;
+	display:flex;
+	justify-content : center;
+	align-items : center;
+	background : #f6f6f6;
+	padding : 40px;
 }
-.all :nth-child(1){
-	width: 450px;
-	margin-top: 70px;
-	display: inline-block;
-}
-.all :nth-child(2){
-	
-	display: flex;
-	width: 300px;
-	background-color: white;
-	padding: 20px;
-	border-radius: 5px;
-	box-shadow: 0 0 10px #ccc;
-	flex-direction: column;
-	gap: 10px;
-	
-}
-.email{
-	   border: 1px solid #ccc;
-	    border-radius: 5px;
-	     padding: 10px;
-	
-}
-.password{
-	border: 1px solid #ccc;
-	    border-radius: 5px;
-	     padding: 10px;
-}
-.btn{
-	background-color: #1877f2;
-	border-radius: 5px;
-	padding: 10px 20px;
-	
-}
-.anc{
-	text-decoration: none;
-	color: #1877f2;
-}
-.signup{
-	 background-color: #42b72a !important;
-}
-.right{
-	background-color: rgb(255,255,255) !important;
+.left p{
+	width : 80%;
 }
 form{
-	background-color: white;
+	display:flex;
+	flex-direction : column;
+	gap:10px;
+	text-align : center;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	padding : 20px 40px;
+}
+form input{
+	padding: 10px;
+		width : 100%;
+		border-radius : 5px;
+		border: 1px solid #d1d1d1;	
+}
+.signup{
+	background : #1a77f2;
+	color : #fff;
+	width : 105%;
+	height : 30px;
+}
+button{
+	background : #43B72A;
+	height : 30px;
+	border : none;
+	border-radius : 5px;
+}
+.create{
+	text-decoration : none;
+	color : #fff;
 }
